--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -58,7 +58,7 @@
         }
       }
 
-      .theme-jura & {
+      .theme-jur & {
         border-left: 8px solid @jura;
 
         a {
@@ -68,7 +68,7 @@
         }
       }
 
-      .theme-teol & {
+      .theme-teo & {
         border-left: 8px solid @teol;
 
         a {
@@ -105,11 +105,11 @@
               color: @sund;
             }
 
-            .theme-jura & {
+            .theme-jur & {
               color: @jura;
             }
 
-            .theme-teol & {
+            .theme-teo & {
               color: @teol;
             }
             font-weight: bold;
@@ -145,11 +145,11 @@
               color: @sund;
             }
 
-            .theme-jura & {
+            .theme-jur & {
               color: @jura;
             }
 
-            .theme-teol & {
+            .theme-teo & {
               color: @teol;
             }
             text-decoration: none;
@@ -195,11 +195,11 @@
               color: @sund;
             }
 
-            .theme-jura & {
+            .theme-jur & {
               color: @jura;
             }
 
-            .theme-teol & {
+            .theme-teo & {
               color: @teol;
             }
             border: 1px solid #d7d7d7;
@@ -225,11 +225,11 @@
                 background-color: @sund;
               }
 
-              .theme-jura & {
+              .theme-jur & {
                 background-color: @jura;
               }
 
-              .theme-teol & {
+              .theme-teo & {
                 background-color: @teol;
               }
               color: @white-color;
@@ -266,11 +266,11 @@
                   color: @sund;
                 }
 
-                .theme-jura & {
+                .theme-jur & {
                   color: @jura;
                 }
 
-                .theme-teol & {
+                .theme-teo & {
                   color: @teol;
                 }
                 font-size: 9px;
