--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -32,12 +32,12 @@
     border-bottom: 1px solid lighten(@sund, 7%);
   }
 
-  .theme-jura & {
+  .theme-jur & {
     background: @jura;
     border-bottom: 1px solid lighten(@jura, 7%);
   }
 
-  .theme-teol & {
+  .theme-teo & {
     background: @teol;
     border-bottom: 1px solid lighten(@teol, 7%);
   }
@@ -107,11 +107,11 @@
       background: @sund;
     }
 
-    .theme-jura & {
+    .theme-jur & {
       background: @jura;
     }
 
-    .theme-teol & {
+    .theme-teo & {
       background: @teol;
     }
     color: @white-color;
@@ -142,11 +142,11 @@
         border-bottom: lighten(@sund, 7%);
       }
 
-      .theme-jura & {
+      .theme-jur & {
         border-bottom: lighten(@jura, 7%);
       }
 
-      .theme-teol & {
+      .theme-teo & {
         border-bottom: lighten(@teol, 7%);
       }
     }
