--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -1,4 +1,4 @@
-// KU News
+// KU Nyheder & arrangementer
 // Global menu news
 
 .nyheder {
@@ -58,6 +58,26 @@
       .mm-next {
         display: none;
       }
+    }
+  }
+}
+// Nyheds- og arrangementslister
+.media {
+  .media-object {
+    max-width: none;
+  }
+
+  .media-heading {
+    a {
+      color: inherit;
+    }
+  }
+}
+
+#calendar {
+  h2 {
+    &.media-heading {
+      .h3;
     }
   }
 }
