--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -157,6 +157,10 @@ nav {
     width: 100%;
   }
 }
+
+//Fix viewport width on Windows phone: http://getbootstrap.com/getting-started/#support-ie10-width
+@-ms-viewport       { width: device-width; }
+
 // Global search button-size
 .btn-global-search {
   button {
