--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -2,7 +2,7 @@
 // KU mobile menu
 // --------------------------------------------------
 
-.local-menu {
+.leftmenu-menu {
   font-size: @font-size-large;
   color: @white-color;
   text-overflow: ellipsis;
