--- a/less/navbar.less
+++ b/less/navbar.less
@@ -610,7 +610,7 @@
         //background-color: @navbar-inverse-link-hover-bg;
       }
       // KU language switcher icons
-      &.dk,
+      &.dan,
       &.eng {
         padding-right: (@grid-gutter-width / 2);
         display: inline-block;
@@ -623,7 +623,7 @@
         background-image: url("../../images/flag-uk.gif");
       }
 
-      &.dk {
+      &.dan {
         background-image: url("../../images/flag-dk.gif");
       }
     }
