--- a/docs/_includes/css/forms.html
+++ b/docs/_includes/css/forms.html
@@ -255,6 +255,29 @@
 <textarea class="form-control" rows="3"></textarea>
 {% endhighlight %}
 
+<h3>File upload</h3>
+<p>Form control which supports custom file upload.</p>
+<div class="bs-example" data-example-id="fileupload-form-control">
+    <div class="input-group">
+        <label class="input-group-btn">
+            <span class="btn btn-file" title="Gennemse">
+                <span class="sr-only sr-only-focusable">Gennemse</span> <input type="file" multiple="">
+            </span>
+        </label>
+        <input type="text" class="form-control" placeholder="Tilføj vedhæftning(er)" readonly="">
+    </div>
+</div><!-- /.bs-example -->
+{% highlight html %}
+<div class="input-group">
+    <label class="input-group-btn">
+        <span class="btn btn-file" title="Gennemse">
+            <span class="sr-only sr-only-focusable">Gennemse</span> <input type="file" multiple="">
+        </span>
+    </label>
+    <input type="text" class="form-control" placeholder="Tilføj vedhæftning(er)" readonly="">
+</div>
+{% endhighlight %}
+
   <h3>Checkboxes and radios</h3>
   <p>Checkboxes are for selecting one or several options in a list, while radios are for selecting one option from many.</p>
   <p>Disabled checkboxes and radios are supported, but to provide a "not-allowed" cursor on hover of the parent <code>&lt;label&gt;</code>, you'll need to add the <code>.disabled</code> class to the parent <code>.radio</code>, <code>.radio-inline</code>, <code>.checkbox</code>, or <code>.checkbox-inline</code>.</p>
