--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -1,5 +1,5 @@
 <!-- Left Navigation on SMALL screens (mmenu) -->
-<nav id="mobileleftmenu"></nav>
+<nav id="mobileleftmenu">{% include ku-mobilemenu-dummy.html %}</nav>
 <!-- Footer -->
 <footer id="footer">
   <div class="container-fluid globalfooter">
@@ -113,11 +113,16 @@
 <script src="../../dist/js/bootstrap.min.js"></script>
 {% else %}
 <script src="../dist/js/bootstrap.js"></script>
-{% endif %} {% if site.github %}
+{% endif %}
+{% if site.github %}
 <script src="../assets/js/docs.min.js"></script>
-{% else %} {% for file in site.data.configBridge.paths.docsJs %}
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+{% for file in site.data.configBridge.paths.docsJs %}
 <script src="{{ file }}"></script>
-{% endfor %} {% endif %} {% if page.slug == "customize" %}
+{% endfor %}
+{% endif %}
+{% if page.slug == "customize" %}
 <script>
   var __configBridge = {
     {
@@ -127,9 +132,11 @@
 </script>
 {% if site.github %}
 <script src="../assets/js/customize.min.js"></script>
-{% else %} {% for file in site.data.configBridge.paths.customizerJs %}
+{% for file in site.data.configBridge.paths.customizerJs %}
 <script src="{{ file }}"></script>
-{% endfor %} {% endif %} {% endif %}
-
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+{% endfor %}
+{% endif %}
+{% endif %}
+{% if page.slug == "css" or page.slug == "components" or page.slug == "js" %}
+<script src="../assets/js/docs.min.js"></script>
+{% endif %}
