--- a/less/KU-misc.less
+++ b/less/KU-misc.less
@@ -169,27 +169,18 @@ nav {
 }
 // KU special file upload button
 .btn-file {
-  position: relative;
-  overflow: hidden;
+    background-color: @white-color;
+    border: 1px solid @gray;
+    padding: 4px 10px;
+    margin-right: -2px;
 
-  input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: @white-color;
-    cursor: inherit;
-    display: block;
-  }
-
-  .glyphicon {
-    color: @gray-light;
-    margin-left: 3px;
-  }
+    &:before {
+        font-size: 14px;
+        content: "\e142";
+        font-family: "Glyphicons Halflings";
+        overflow: hidden;
+    }
+    input[type=file] {
+        display: none;
+    }
 }
