--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -1,5 +1,7 @@
 <!-- Left Navigation on SMALL screens (mmenu) -->
+{% if page.slug == "examples" %}
 <nav id="mobileleftmenu">{% include ku-mobilemenu-dummy.html %}</nav>
+{% endif %}
 <!-- Footer -->
 <footer id="footer">
   <div class="container-fluid globalfooter">
