--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -391,7 +391,7 @@
     }
 
     .social-items {
-      padding: 0 @padding-large-vertical @padding-large-vertical;
+      padding: 0 @padding20 @padding20;
       width: 100%;
 
       .social-item {
