--- a/less/variables.less
+++ b/less/variables.less
@@ -89,7 +89,7 @@
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          12px;
-@font-size-large:         ceil((@font-size-base * 1.168)); // ~14px
+@font-size-large:         ceil((@font-size-base * 1.168)); // ~14px (mobile)
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 @ku-branding-text-font-size: ceil((@font-size-base * 1.5)); //18px
 
@@ -143,10 +143,10 @@
 @padding-base-vertical:     6px;
 @padding-base-horizontal:   10px;
 
-@padding-large-vertical:    20px;
-@padding-large-horizontal:  20px;
+@padding-large-vertical:    10px;
+@padding-large-horizontal:  16px;
 
-@padding-small-vertical:    10px;
+@padding-small-vertical:    5px;
 @padding-small-horizontal:  10px;
 
 @padding-xs-vertical:       1px;
