--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -210,7 +210,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@font-size-large">@font-size-large</label>
-    <input class="form-control" id="input-@font-size-large" type="text" value="ceil((@font-size-base * 1.168))" data-var="@font-size-large"/>
+    <input class="form-control" id="input-@font-size-large" type="text" value="floor((@font-size-base * 1.167))" data-var="@font-size-large"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@font-size-small">@font-size-small</label>
@@ -1793,6 +1793,28 @@
   <div class="col-xs-4">
     <label for="input-@panel-danger-heading-bg">@panel-danger-heading-bg</label>
     <input class="form-control" id="input-@panel-danger-heading-bg" type="text" value="@state-danger-bg" data-var="@panel-danger-heading-bg"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@panel-accordion-text">@panel-accordion-text</label>
+    <input class="form-control" id="input-@panel-accordion-text" type="text" value="@text-color" data-var="@panel-accordion-text"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@panel-accordion-border">@panel-accordion-border</label>
+    <input class="form-control" id="input-@panel-accordion-border" type="text" value="#b4b4b4" data-var="@panel-accordion-border"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@panel-accordion-heading-bg">@panel-accordion-heading-bg</label>
+    <input class="form-control" id="input-@panel-accordion-heading-bg" type="text" value="#ededed" data-var="@panel-accordion-heading-bg"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@panel-accordion-border-radius">@panel-accordion-border-radius</label>
+    <input class="form-control" id="input-@panel-accordion-border-radius" type="text" value="@border-radius-small" data-var="@panel-accordion-border-radius"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@panel-accordion-arrow-active">@panel-accordion-arrow-active</label>
+    <input class="form-control" id="input-@panel-accordion-arrow-active" type="text" value="#4c4c4c" data-var="@panel-accordion-arrow-active"/>
   </div>
 </div>
 <h2 id="thumbnails">Thumbnails</h2>
