--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -12,6 +12,7 @@
         <img src="../examples/screenshots/ku_standard.png" alt="KU templates">
       </a>
       <h3>KU layout templates</h3>
+      <p>Templates for University of Copenhagen.</p>
     </div>
 
     <div class="clearfix visible-xs"></div>
@@ -24,13 +25,12 @@
       <p>Multiple examples of grid layouts with all four tiers, nesting, and more.</p>
     </div>
     <div class="clearfix visible-xs"></div>
-
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/jumbotron-narrow/">
-        <img src="../examples/screenshots/jumbotron-narrow.jpg" alt="Narrow jumbotron example">
+      <a class="thumbnail" href="../examples/non-responsive/">
+        <img src="../examples/screenshots/non-responsive.jpg" alt="Non-responsive example">
       </a>
-      <h3>Narrow jumbotron</h3>
-      <p>Build a more custom page by narrowing the default container and jumbotron.</p>
+      <h3>Non-responsive Bootstrap</h3>
+      <p>Easily disable the responsiveness of Bootstrap <a href="#disable-responsive">per our docs</a>.</p>
     </div>
   </div>
 
@@ -64,13 +64,6 @@
   <h2 id="examples-custom">Custom components</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/cover/">
-        <img src="../examples/screenshots/cover.jpg" alt="A one-page template example">
-      </a>
-      <h3>Cover</h3>
-      <p>A one-page template for building simple and beautiful home pages.</p>
-    </div>
-    <div class="col-xs-6 col-md-4">
       <a class="thumbnail" href="../examples/carousel/">
         <img src="../examples/screenshots/carousel.jpg" alt="Carousel example">
       </a>
@@ -102,13 +95,6 @@
       <h3>Sign-in page</h3>
       <p>Custom form layout and design for a simple sign in form.</p>
     </div>
-    <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/justified-nav/">
-        <img src="../examples/screenshots/justified-nav.jpg" alt="Justified nav example">
-      </a>
-      <h3>Justified nav</h3>
-      <p>Create a custom navbar with justified links. Heads up! <a href="../components/#nav-justified">Not too Safari friendly.</a></p>
-    </div>
     <div class="clearfix visible-xs"></div>
 
     <div class="col-xs-6 col-md-4">
@@ -129,13 +115,6 @@
 
   <h2 id="examples-experiments">Experiments</h2>
   <div class="row bs-examples">
-    <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/non-responsive/">
-        <img src="../examples/screenshots/non-responsive.jpg" alt="Non-responsive example">
-      </a>
-      <h3>Non-responsive Bootstrap</h3>
-      <p>Easily disable the responsiveness of Bootstrap <a href="#disable-responsive">per our docs</a>.</p>
-    </div>
     <div class="col-xs-6 col-md-4">
       <a class="thumbnail" href="../examples/offcanvas/">
         <img src="../examples/screenshots/offcanvas.jpg" alt="Off-canvas navigation example">
