--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -23,9 +23,9 @@
         <li{% if page.slug == "js" %} class="active"{% endif %}>
           <a href="../javascript/">JavaScript</a>
         </li>
-        <li{% if page.slug == "customize" %} class="active"{% endif %}>
+        <!-- <li{% if page.slug == "customize" %} class="active"{% endif %}>
           <a href="../customize/">Customize</a>
-        </li>
+        </li> -->
       </ul>
     </nav>
   </div>
