--- a/less/mixins/panels.less
+++ b/less/mixins/panels.less
@@ -1,12 +1,12 @@
 // Panels
 
 .panel-variant(@border; @heading-text-color; @heading-bg-color; @heading-border) {
-  //border-color: @border;
+  border-color: @border;
 
   & > .panel-heading {
-    color: @panel-default-header-text;
-    #gradient > .vertical-three-colors(#eee; #e8e8e6; 50%; #f1f1f1);
-    border-bottom: 1px solid @heading-border;
+    color: @heading-text-color;
+    background-color: @heading-bg-color;
+    border-color: @heading-border;
 
     + .panel-collapse > .panel-body {
       border-top-color: @border;
