--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -13,20 +13,19 @@
 </title>
 <!-- Bootstrap core CSS -->
 {% if site.github %}
-<link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.url }}/dist/css/bootstrap.min.css" rel="stylesheet">
 {% elsif page.slug == 'examples' %}
 <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 {% else %}
 <link href="../dist/css/bootstrap.css" rel="stylesheet">
 {% endif %}
-{% if page.slug == "css" or page.slug == "components" or page.slug == "js" %}
-  <!-- Optional Bootstrap Theme -->
+<!-- {% if page.slug == "css" or page.slug == "components" or page.slug == "js" %}
 {% if site.github %}
   <link href="data:text/css;charset=utf-8," data-href="../dist/css/bootstrap-theme.min.css" rel="stylesheet" id="bs-theme-stylesheet">
 {% else %}
   <link href="data:text/css;charset=utf-8," data-href="../dist/css/bootstrap-theme.css" rel="stylesheet" id="bs-theme-stylesheet">
 {% endif %}
-{% endif %}
+{% endif %} -->
 {% if site.github %}
 <!-- Documentation extras -->
 <link href="../assets/css/docs.min.css" rel="stylesheet">
