--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -110,21 +110,21 @@
 <script src="../../custom/ku-mobile-menu.js"></script>
 {% endif %}
 {% if site.github %}
-<script src="../dist/js/bootstrap.min.js"></script>
+<script src="{{ site.url }}/dist/js/bootstrap.min.js"></script>
 {% elsif page.slug == 'examples' %}
 <script src="../../dist/js/bootstrap.min.js"></script>
 {% else %}
 <script src="../dist/js/bootstrap.js"></script>
 {% endif %}
 {% if site.github %}
-<script src="../assets/js/docs.min.js"></script>
+<script src="{{ site.url }}/assets/js/docs.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="{{ site.url }}/assets/js/ie10-viewport-bug-workaround.js"></script>
 {% for file in site.data.configBridge.paths.docsJs %}
 <script src="{{ file }}"></script>
 {% endfor %}
 {% endif %}
-{% if page.slug == "customize" %}
+<!-- {% if page.slug == "customize" %}
 <script>
   var __configBridge = {
     {
@@ -138,7 +138,7 @@
 <script src="{{ file }}"></script>
 {% endfor %}
 {% endif %}
-{% endif %}
+{% endif %} -->
 {% if page.slug == "css" or page.slug == "components" or page.slug == "js" %}
 <script src="../assets/js/docs.min.js"></script>
 {% endif %}
