--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -13,7 +13,7 @@
 </title>
 <!-- Bootstrap core CSS -->
 {% if site.github %}
-<link href="{{ site.url }}/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
 {% elsif page.slug == 'examples' %}
 <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 {% else %}
