--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -17,7 +17,7 @@
 {% elsif page.slug == 'examples' %}
 <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 {% else %}
-<link href="../dist/css/bootstrap.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/bootstrap.css" rel="stylesheet">
 {% endif %}
 <!-- {% if page.slug == "css" or page.slug == "components" or page.slug == "js" %}
 {% if site.github %}
