--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -2,7 +2,7 @@
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
     <div class="container relative">
       <a class="topbar-logo" href="/">
-         <img class="img-responsive" src="../../images/ku_top_dk.svg" alt="Københavns universitet">
+         <img class="img-responsive" src="{{ site.url }}/images/ku_top_dk.svg" alt="Københavns universitet">
       </a>
 
       <div id="topbar" class="navbar-collapse collapse">
