--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -34,11 +34,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 {% if site.github %}
 <script>
-  window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery.min.js"><\/script>')
+  window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')
 </script>
-{% endif %}
 <!-- Bootstrap datetimepicker -->
+<script src="{{ site.baseurl }}/assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
+{% elsif page.slug == 'examples' %}
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
+{% endif %}
+
+
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
