--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -38,7 +38,8 @@
 </script>
 <!-- Bootstrap datetimepicker -->
 <script src="{{ site.baseurl }}/assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
-{% elsif page.slug == 'examples' %}
+{% endif %}
+{% if page.slug == 'examples' %}
 <script src="../../assets/js/datetimepicker/bootstrap-datetimepicker.js"></script>
 {% endif %}
 
